Añadido Formulario para añadir tipos de tazas

--- a/Frontend/almacen/src/app/components/main-nav/main-nav.component.html
+++ b/Frontend/almacen/src/app/components/main-nav/main-nav.component.html
@@ -8,6 +8,7 @@
       <a class="nav-item nav-link" routerLink="/inventario" routerLinkActive="active">Invenatario</a>
       <a class="nav-item nav-link" routerLink="/entradas"   routerLinkActive="active">Entradas</a>
       <a class="nav-item nav-link" routerLink="/salidas"    routerLinkActive="active">Salidas</a>
+      <a class="nav-item nav-link" routerLink="/tipos"      routerLinkActive="active">Tipos de tazas</a>
     </div>
   </div>
 </nav>
