Ultimos detalles frontend

--- a/Frontend/almacen/src/app/components/inventario/inventario.component.html
+++ b/Frontend/almacen/src/app/components/inventario/inventario.component.html
@@ -134,7 +134,7 @@
 
           </div>
           <div class="col">
-            <mat-label>Color</mat-label>
+            <mat-label>Color (hex)</mat-label>
               <input matInput placeholder="Color"  formControlName="color" type="color">
           </div>
         </div>
@@ -143,13 +143,13 @@
         <div class="row">
           <div class="col">
             <mat-form-field  style="width: 100%;" appearance="outline">
-              <mat-label>Altura</mat-label>
+              <mat-label>Altura (cm)</mat-label>
               <input matInput placeholder="Altura" formControlName="altura"  type="number">
             </mat-form-field>
           </div>
           <div class="col">
             <mat-form-field  style="width: 100%;" appearance="outline">
-              <mat-label>Ancho</mat-label>
+              <mat-label>Ancho (cm)</mat-label>
               <input matInput placeholder="Ancho" formControlName="ancho"  type="number">
             </mat-form-field>
           </div>
@@ -159,7 +159,7 @@
         <div class="row">
           <div class="col">
             <mat-form-field  style="width: 100%;" appearance="outline">
-              <mat-label>Capacidad</mat-label>
+              <mat-label>Capacidad (ml)</mat-label>
               <input matInput placeholder="Capacidad" formControlName="capacidad"  type="number">
             </mat-form-field>
           </div>
@@ -181,7 +181,7 @@
           </div>
           <div class="col">
             <mat-form-field  style="width: 100%;" appearance="outline">
-              <mat-label>Stock</mat-label>
+              <mat-label>Stock (pz)</mat-label>
               <input matInput placeholder="Stock" formControlName="stock"  type="number">
             </mat-form-field>
           </div>
@@ -235,7 +235,7 @@
 
             </div>
             <div class="col">
-              <mat-label>Color</mat-label>
+              <mat-label>Color (hex)</mat-label>
                 <input matInput placeholder="Color"  formControlName="color" type="color">
             </div>
           </div>
@@ -244,13 +244,13 @@
           <div class="row">
             <div class="col">
               <mat-form-field  style="width: 100%;" >
-                <mat-label>Altura</mat-label>
+                <mat-label>Altura (cm)</mat-label>
                 <input matInput placeholder="Altura" formControlName="altura"  type="number">
               </mat-form-field>
             </div>
             <div class="col">
               <mat-form-field  style="width: 100%;" >
-                <mat-label>Ancho</mat-label>
+                <mat-label>Ancho </mat-label>
                 <input matInput placeholder="Ancho" formControlName="ancho"  type="number">
               </mat-form-field>
             </div>
@@ -260,7 +260,7 @@
           <div class="row">
             <div class="col">
               <mat-form-field  style="width: 100%;" >
-                <mat-label>Capacidad</mat-label>
+                <mat-label>Capacidad (ml)</mat-label>
                 <input matInput placeholder="Capacidad" formControlName="capacidad"  type="number">
               </mat-form-field>
             </div>
@@ -282,7 +282,7 @@
             </div>
             <div class="col">
               <mat-form-field  style="width: 100%;">
-                <mat-label>Stock</mat-label>
+                <mat-label>Stock (pz)</mat-label>
                 <input matInput  placeholder="Stock" formControlName="stock"  type="number" >
               </mat-form-field>
             </div>
