--- a/Frontend/almacen/src/app/components/home/home.component.html
+++ b/Frontend/almacen/src/app/components/home/home.component.html
@@ -1,2 +1,9 @@
 <app-main-nav></app-main-nav>
-<h1>Esta sera la pagina de inicio</h1>
+<div class="container">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col"><img src="../../../assets/almacen.png"class="center" style="max-width:100%;"></div>
+    <div class="col"></div>
+  </div>
+
+</div>
